Blender tries to use full sample with external engines, and shouldn't #36091

Closed
opened 2013-07-11 04:44:28 +02:00 by Jason Clarke · 4 comments

%%%--- Operating System, Graphics card ---
OS X 10.8.4 AMD 5770

- Blender version with error, and version that worked ---

58141

- Short description of error ---

If you enable Full Sample AA and try to render with an external engine (ex, Yafa, Lux), Blender will lock up or crash when attempting to load the render result. Turning off FSAA fixes the issue. Cycles seems unaffected, and also lacks a checkbox for full sample. It seems it has some ability to ignore it? If so, this should be the default handling for all external engines.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  • Make a scene (any scene, default cube is fine), turn on AA and full sample
  • Render with BI and Cycles, all is fine
  • Render with an external engine such as Yafaray or Lux, Blender will lock up or crash
  • Turn off full sample and the external engines work fine
    %%%
%%%--- Operating System, Graphics card --- OS X 10.8.4 AMD 5770 - Blender version with error, and version that worked --- 58141 - Short description of error --- If you enable Full Sample AA and try to render with an external engine (ex, Yafa, Lux), Blender will lock up or crash when attempting to load the render result. Turning off FSAA fixes the issue. Cycles seems unaffected, and also lacks a checkbox for full sample. It seems it has some ability to ignore it? If so, this should be the default handling for all external engines. - Steps for others to reproduce the error (preferably based on attached .blend file) --- - Make a scene (any scene, default cube is fine), turn on AA and full sample - Render with BI and Cycles, all is fine - Render with an external engine such as Yafaray or Lux, Blender will lock up or crash - Turn off full sample and the external engines work fine %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Developer note: Wondering what's wrong here.
validate_render_settings() should catch this case via RE_engine_is_external()?%%%

%%%Developer note: Wondering what's wrong here. validate_render_settings() should catch this case via RE_engine_is_external()?%%%

%%%Fix in svn revision 58174, thanks for the report.

The problem is the save buffers option (automatically enabled by full sample). It requires specific tile sizes and if they don't match what OpenEXR expects file saving can get stuck, but when you're already loading the result from an EXR file it's also not very useful to have anyway.

Now I've made support for his optional, with a bl_use_save_buffers property for RenderEngine, set to False by default.
%%%

%%%Fix in svn revision 58174, thanks for the report. The problem is the save buffers option (automatically enabled by full sample). It requires specific tile sizes and if they don't match what OpenEXR expects file saving can get stuck, but when you're already loading the result from an EXR file it's also not very useful to have anyway. Now I've made support for his optional, with a bl_use_save_buffers property for RenderEngine, set to False by default. %%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36091
No description provided.