Fix #36091: external render engines like Luxrender don't work well with the save buffers option, it requires specific tile sizes and if they don't match what OpenEXR expects file saving can get stuck.

Now I've made support for his optional, with a bl_use_save_buffers property for
RenderEngine, set to False by default.