source/blender/render/intern/source/external_engine.c
@@ -253,8 +253,14 @@ void RE_engine_end_result(RenderEngine *engine, RenderResult *result, int cancel
 		/* for exr tile render, detect tiles that are done */
 		RenderPart *pa = get_part_from_result(re, result);
 
-		if (pa)
+		if (pa) {
 			pa->status = PART_STATUS_READY;
+		}
+		else if (re->result->do_exr_tile) {
+			/* if written result does not match any tile and we are using save
+			 * buffers, we are going to get openexr save errors */
+			fprintf(stderr, "RenderEngine.end_result: dimensions do not match any OpenEXR tile.\n");
+		}
 
 		if (re->result->do_exr_tile)
 			render_result_exr_file_merge(re->result, result);
@@ -438,12 +444,13 @@ int RE_engine_render(Render *re, int do_all)
 	/* create render result */
 	BLI_rw_mutex_lock(&re->resultmutex, THREAD_LOCK_WRITE);
 	if (re->result == NULL || !(re->r.scemode & R_BUTS_PREVIEW)) {
-		int savebuffers;
+		int savebuffers = RR_USE_MEM;
 
 		if (re->result)
 			render_result_free(re->result);
 
-		savebuffers = (re->r.scemode & R_EXR_TILE_FILE) ? RR_USE_EXR : RR_USE_MEM;
+		if ((type->flag & RE_USE_SAVE_BUFFERS) && (re->r.scemode & R_EXR_TILE_FILE))
+			savebuffers = RR_USE_EXR;
 		re->result = render_result_new(re, &re->disprect, 0, savebuffers, RR_ALL_LAYERS);
 	}
 	BLI_rw_mutex_unlock(&re->resultmutex);
